--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dolly\\Scheduler\\scheduler\n"
+      "C:\\Users\\James\\Documents\\GitHub\\Scheduler\\scheduler\n"
      ]
     }
    ],
@@ -47,15 +47,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n",
-      "Requirement already satisfied: xlrd in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (1.2.0)\n"
+      "'pip3' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'pip3' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -431,24 +429,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MON\n",
-      "-----\n",
-      "\n",
-      "TUES\n",
-      "-----\n",
-      "\n",
-      "WED\n",
-      "-----\n",
-      "\n",
-      "THUR\n",
-      "-----\n",
-      "\n",
-      "FRI\n",
-      "-----\n",
-      "\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'min_conflicted' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-802af0e86c7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0muser_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mprofessors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprof_info\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrooms\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mroom_capacities\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcourses\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcourse_no_students\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcourse_mins\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcourse_days_weekly\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfull_schedule\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0massigner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mweekdays\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'mon'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'tues'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'wed'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'thur'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'fri'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Day'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Course'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Professor'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Room'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Period'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\GitHub\\Scheduler\\scheduler\\teachercourse_csp.py\u001b[0m in \u001b[0;36massigner\u001b[1;34m(user_data)\u001b[0m\n\u001b[0;32m    170\u001b[0m             \u001b[0madd_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    171\u001b[0m             \u001b[0mminconf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mminConflicts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 172\u001b[1;33m             \u001b[0msolved\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mminconf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_iters\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    173\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0msolved\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m                 \u001b[0mretries\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\GitHub\\Scheduler\\scheduler\\cspsolver.py\u001b[0m in \u001b[0;36msolve\u001b[1;34m(self, max_iters)\u001b[0m\n\u001b[0;32m    162\u001b[0m                 \u001b[0massignments_cpy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    163\u001b[0m                 \u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconflicted_neighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0massignments_cpy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 164\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mmin_conflicted\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    165\u001b[0m                     \u001b[0massignments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0massignments_cpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    166\u001b[0m                     \u001b[0mmin_conflicted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'min_conflicted' referenced before assignment"
      ]
     }
    ],
@@ -478,215 +468,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Course</th>\n",
-       "      <th>Professor</th>\n",
-       "      <th>Room</th>\n",
-       "      <th>Period</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>mon</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>John Smith</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>mon</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>655</td>\n",
-       "      <td>11:30 to 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>mon</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>14:30 to 15:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>mon</td>\n",
-       "      <td>calculus 4</td>\n",
-       "      <td>Lisa Mullen</td>\n",
-       "      <td>433</td>\n",
-       "      <td>11:30 to 12:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Gregg Woods</td>\n",
-       "      <td>433</td>\n",
-       "      <td>15:30 to 17:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>08:00 to 09:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>655</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Chu Yen</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>11:30 to 12:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>calculus 4</td>\n",
-       "      <td>Lisa Mullen</td>\n",
-       "      <td>745a</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>astrophysics</td>\n",
-       "      <td>Chu Yen</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>wed</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Gregg Woods</td>\n",
-       "      <td>201</td>\n",
-       "      <td>15:30 to 17:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>wed</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>14:00 to 15:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>John Smith</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>11:00 to 12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>molecular biology</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>666</td>\n",
-       "      <td>12:30 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Chu Yen</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>16:30 to 17:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>John Smith</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>655</td>\n",
-       "      <td>12:00 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>17</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>10:30 to 12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Chu Yen</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>11:30 to 12:30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Day             Course     Professor  Room          Period\n",
-       "0    mon            physics    John Smith  115a  10:30 to 11:30\n",
-       "1    mon          chemistry  Peter Parker   655  11:30 to 13:00\n",
-       "2    mon          biology 2  Rachel Smith  115b  14:30 to 15:30\n",
-       "3    mon         calculus 4   Lisa Mullen   433  11:30 to 12:30\n",
-       "4   tues       biochemistry   Gregg Woods   433  15:30 to 17:00\n",
-       "5   tues          biology 1  Peter Parker  745b  08:00 to 09:30\n",
-       "6   tues          biology 2  Rachel Smith   655  09:00 to 10:00\n",
-       "7   tues         calculus 1       Chu Yen  115a  11:30 to 12:30\n",
-       "8   tues         calculus 4   Lisa Mullen  745a  09:30 to 10:30\n",
-       "9   tues       astrophysics       Chu Yen  115b  10:30 to 11:30\n",
-       "10   wed       biochemistry   Gregg Woods   201  15:30 to 17:00\n",
-       "11   wed          biology 2  Rachel Smith  115a  14:00 to 15:00\n",
-       "12  thur            physics    John Smith  115b  11:00 to 12:00\n",
-       "13  thur  molecular biology  Peter Parker   666  12:30 to 13:30\n",
-       "14  thur         calculus 1       Chu Yen  115a  16:30 to 17:30\n",
-       "15   fri            physics    John Smith  115a  10:30 to 11:30\n",
-       "16   fri          chemistry  Peter Parker   655  12:00 to 13:30\n",
-       "17   fri          biology 1  Peter Parker  745b  10:30 to 12:00\n",
-       "18   fri         calculus 1       Chu Yen  115b  11:30 to 12:30"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'df_out' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-641372463901>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_out\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_out' is not defined"
+     ]
     }
    ],
    "source": [
@@ -717,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
